--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="es" dir="ltr">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,5 +8,22 @@
         <script src="main.js" defer></script>
     </head>
     <body>
+        <div id="base">
+            <div id="canal_1">
+
+            </div>
+            <div id="canal_2">
+
+            </div>
+            <div id="canal_3">
+
+            </div>
+            <div id="canal_4">
+
+            </div>
+            <div id="canales_id">
+
+            </div>
+        </div>
     </body>
 </html>
