--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
     </head>
     <body>
         <div id="base">
-            <div id="canal_1">
+            <table class="default" border="1">
 
-            </div>
-            <div id="canal_2">
-
-            </div>
-            <div id="canal_3">
-
-            </div>
-            <div id="canal_4">
-
-            </div>
-            <div id="canales_id">
-
-            </div>
+                <tr>
+                    <th id="canal_1">canal 1</th>
+                    <th id="canal_2">canal 2</th>
+                    <th id="canal_3">canal 3</th>
+                    <th id="canales_id">canal conjunto</th>
+                </tr>
+            </table>
+            
         </div>
     </body>
 </html>
