organización columna derecha

--- a/index.html
+++ b/index.html
@@ -56,14 +56,34 @@
                     <th id="canales_id">
                                                 
                         <table>
-                            <tr><td>load</td></tr>
-                            <tr><td>gain</td></tr>
-                            <tr><td>aux1</td></tr>
-                            <tr><td>aux2</td></tr>
-                            <tr><td>PFL</td></tr>
-                            <tr><td>mute</td></tr>
-                            <tr><td>main</td></tr>
-                            <tr><td>slider</td></tr>
+                            <tr>
+                                <td>aux1</td>
+                                <td>pfl</td>
+                            </tr>
+                            <tr>
+                                <td>aux2</td>
+                                <td>main</td>
+                            </tr>
+                            <tr>
+                                <td>pfl</td>
+                            </tr>
+                            <tr>
+                                <td>barras</td>
+                                <td>barras</td>
+                                <td>aux1</td>
+                            </tr>
+                            <tr>
+                                <td></td>
+                                <td>aux2</td>
+                            </tr>
+                            <tr>
+                                <td>mute</td>
+                                <td>mute</td>
+                            </tr>
+                            <tr>
+                                <td>slider</td>
+                                <td>slider</td>
+                            </tr>
                         </table>
 
                     </th>
