--- a/index.html
+++ b/index.html
@@ -53,6 +53,20 @@
                         </table>
 
                     </th>
+                    <th id="canal_4">
+                        
+                        <table>
+                            <tr><td>load</td></tr>
+                            <tr><td>gain</td></tr>
+                            <tr><td>aux1</td></tr>
+                            <tr><td>aux2</td></tr>
+                            <tr><td>PFL</td></tr>
+                            <tr><td>mute</td></tr>
+                            <tr><td>main</td></tr>
+                            <tr><td>slider</td></tr>
+                        </table>
+
+                    </th>
                     <th id="canales_id">
                                                 
                         <table>
