añadiendo imagen diseño

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                                 <tr><td class="load" id="load_ch1">load</td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
-                                <tr><td class="gain" id="gain_ch1">gain</td></tr>
+                                <tr><td class="gain" id="gain_ch1"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">AUX 1</td></tr>
-                                <tr><td class="aux" id="aux1_ch1">aux1</td></tr>
+                                <tr><td class="aux" id="aux1_ch1"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">AUX 2</td></tr>
-                                <tr><td class="aux" id="aux2_ch1">aux2</td></tr>
+                                <tr><td class="aux" id="aux2_ch1"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td class="pfl" id="pfl_ch1">PFL</td></tr>
                                 <tr><td></td></tr>
@@ -40,13 +40,13 @@
                             <tr><td class="load" id="load_ch2">load</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
-                            <tr><td class="gain" id="gain_ch2">gain</td></tr>
+                            <tr><td class="gain" id="gain_ch2"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 1</td></tr>
-                            <tr><td class="aux" id="aux1_ch2">aux1</td></tr>
+                            <tr><td class="aux" id="aux1_ch2"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 2</td></tr>
-                            <tr><td class="aux" id="aux2_ch2">aux2</td></tr>
+                            <tr><td class="aux" id="aux2_ch2"></td></tr>
                             <tr><td></td></tr>
                             <tr><td class="pfl" id="pfl_ch2">PFL</td></tr>
                             <tr><td></td></tr>
@@ -63,13 +63,13 @@
                             <tr><td class="load" id="load_ch3">load</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
-                            <tr><td class="gain" id="gain_ch3">gain</td></tr>
+                            <tr><td class="gain" id="gain_ch3"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 1</td></tr>
-                            <tr><td class="aux" id="aux1_ch3">aux1</td></tr>
+                            <tr><td class="aux" id="aux1_ch3"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 2</td></tr>
-                            <tr><td class="aux" id="aux2_ch3">aux2</td></tr>
+                            <tr><td class="aux" id="aux2_ch3"></td></tr>
                             <tr><td></td></tr>
                             <tr><td class="pfl" id="pfl_ch3">PFL</td></tr>
                             <tr><td></td></tr>
@@ -86,13 +86,13 @@
                             <tr><td class="load" id="load_ch4">load</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
-                            <tr><td class="gain" id="gain_ch4">gain</td></tr>
+                            <tr><td class="gain" id="gain_ch4"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 1</td></tr>
-                            <tr><td class="aux" id="aux1_ch4">aux1</td></tr>
+                            <tr><td class="aux" id="aux1_ch4"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">AUX 2</td></tr>
-                            <tr><td class="aux" id="aux2_ch4">aux2</td></tr>
+                            <tr><td class="aux" id="aux2_ch4"></td></tr>
                             <tr><td></td></tr>
                             <tr><td class="pfl" id="pfl_ch4">PFL</td></tr>
                             <tr><td></td></tr>
