--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
                                 <tr><td class="main" id="main_ch1">main</td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="title">CH 1</td></tr>
-                                <tr><td class="slider" id="slider_ch1">slider</td></tr>
+                                <tr>
+                                    <td class="slider">
+                                        <input type="range" id="slider_ch1" min="-20" max="50" value="0">
+                                    </td>
+                                </tr>
                         </table>
                     
                     </th>
@@ -55,7 +59,11 @@
                             <tr><td class="main" id="main_ch2">main</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="title">CH 2</td></tr>
-                            <tr><td class="slider" id="slider_ch2">slider</td></tr>
+                            <tr>
+                                <td class="slider">
+                                    <input type="range" id="slider_ch2" min="-20" max="50" value="0">
+                                </td>
+                            </tr>
                     </table>
                     </th>
                     <th id="canal_3">
@@ -78,7 +86,11 @@
                             <tr><td class="main" id="main_ch3">main</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="title">CH 3</td></tr>
-                            <tr><td class="slider" id="slider_ch3">slider</td></tr>
+                            <tr>
+                                <td class="slider">
+                                    <input type="range" id="slider_ch3" min="-20" max="50" value="0">
+                                </td>
+                            </tr>
                     </table>
                     </th>
                     <th id="canal_4">
@@ -101,7 +113,11 @@
                             <tr><td class="main" id="main_ch4">main</td></tr>
                             <tr><td></td></tr>
                             <tr><td id="title">CH </td></tr>
-                            <tr><td class="slider" id="slider_ch4">slider</td></tr>
+                            <tr>
+                                <td class="slider">
+                                    <input type="range" id="slider_ch4" min="-20" max="50" value="0">
+                                </td>
+                            </tr>
                     </table>
                     </th>
                     <th id="canales_id">
