--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <tr><td></td></tr>
                             <tr><td class="main" id="main_ch4">main</td></tr>
                             <tr><td></td></tr>
-                            <tr><td id="title">CH </td></tr>
+                            <tr><td id="title">CH 4</td></tr>
                             <tr>
                                 <td class="slider">
                                     <input type="range" id="slider_ch4" min="-20" max="50" value="0">
@@ -148,8 +148,12 @@
                                 <td>mute</td>
                             </tr>
                             <tr>
-                                <td>slider</td>
-                                <td>slider</td>
+                                <td class="slider">
+                                    <input type="range" id="slider_left" min="-20" max="50" value="0">
+                                </td>
+                                <td class="slider">
+                                    <input type="range" id="slider_right" min="-20" max="50" value="0">
+                                </td>
                             </tr>
                         </table>
 
