cambios para js

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                                 <tr>
                                     <td class="slider">
                                         <input type="range" id="slider_ch1" min="-20" max="50" value="0">
+                                        <p id="value_slider1">0</p>
                                     </td>
                                 </tr>
                         </table>
