--- a/index.html
+++ b/index.html
@@ -16,13 +16,22 @@
                                 <tr><td class="load" id="load_ch1">load</td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
-                                <tr><td class="gain" id="gain_ch1"></td></tr>
+                                <tr><td class="potenciometro" id="gain_ch1">
+                                    <input type="range" min="0" max="15" value="0">
+                                    <p id="value_gain1">0</p>
+                                </td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">AUX 1</td></tr>
-                                <tr><td class="aux" id="aux1_ch1"></td></tr>
+                                <tr><td class="potenciometro" id="aux1_ch1">
+                                    <input type="range" min="0" max="15" value="0">
+                                    <p id="value_aux1">0</p>
+                                </td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">AUX 2</td></tr>
-                                <tr><td class="aux" id="aux2_ch1"></td></tr>
+                                <tr><td class="potenciometro" id="aux2_ch1">
+                                    <input type="range" min="0" max="15" value="0">
+                                    <p id="value_aux2">0</p>
+                                </td></tr>
                                 <tr><td></td></tr>
                                 <tr><td class="pfl" id="pfl_ch1">PFL</td></tr>
                                 <tr><td></td></tr>
@@ -35,8 +44,8 @@
                                 <tr><td id="title">CH 1</td></tr>
                                 <tr>
                                     <td class="slider">
-                                        <input type="range" id="slider_ch1" min="-20" max="50" value="0">
-                                        <p id="value_slider1">0</p>
+                                        <input type="range" id="slider_ch1" min="-24" max="3" value="-24">
+                                        <p id="value_slider1">-24</p>
                                     </td>
                                 </tr>
                         </table>
