cambio ch1 a botones

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <tr>
                     <th id="canal_1">
                         <table>
-                                <tr><td class="load" id="load_ch1">load</td></tr>
+                                <tr><td><input type="button" class="load" id="load_ch1" value="LOAD"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
                                 <tr><td class="potenciometro" id="gain_ch1">
@@ -33,11 +33,11 @@
                                     <p id="value_ch1_aux2">0</p>
                                 </td></tr>
                                 <tr><td></td></tr>
-                                <tr><td class="pfl" id="pfl_ch1">PFL</td></tr>
+                                <tr><td><input type="button" class="pfl" id="pfl_ch1" value="PFL"></td></tr>
                                 <tr><td></td></tr>
-                                <tr><td class="mute" id="mute_ch1">mute</td></tr>
+                                <tr><td><input type="button" class="main" id="main_ch1" value="MAIN"></td></tr>
                                 <tr><td></td></tr>
-                                <tr><td class="main" id="main_ch1">main</td></tr>
+                                <tr><td><input type="button" class="mute" id="mute_ch1" value="MUTE"></td></tr>
                                 <tr><td></td></tr>
                             </table>
                             <table>
@@ -53,7 +53,7 @@
                     </th>
                     <th id="canal_2">
                         <table>
-                            <tr><td class="load" id="load_ch2">load</td></tr>
+                            <tr><td><input type="button" class="load" id="load_ch2" value="LOAD"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch2">
@@ -92,7 +92,7 @@
                     </th>
                     <th id="canal_3">
                         <table>
-                            <tr><td class="load" id="load_ch3">load</td></tr>
+                            <tr><td><input type="button" class="load" id="load_ch3" value="LOAD"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch3">
@@ -131,7 +131,7 @@
                     </th>
                     <th id="canal_4">
                         <table>
-                            <tr><td class="load" id="load_ch4">load</td></tr>
+                            <tr><td><input type="button" class="load" id="load_ch4" value="LOAD"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch4">
@@ -206,7 +206,6 @@
                             <table>
                                 <tr>
                                     <td class="btn_all" id="pfl_global">PFL</td>
-                                </tr>
                                 <tr>
                                     <td class="btn_all" id="main_global">MAIN</td>
                                 </tr>
