--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <tr>
                     <th id="canal_1">
                         <table>
-                                <tr><td><input type="button" class="btn" id="load_ch1" value="LOAD"></td></tr>
+                                <tr><td><input type="button" class="btn" id="play_ch1" value="PLAY"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
                                 <tr><td class="potenciometro" id="gain_ch1">
@@ -210,7 +210,7 @@
                                 <tr><td></td></tr>
                                 <tr><td><input type="button" class="btn" id="main_global" value="MAIN"></td></tr>
                                 <tr><td></td></tr>
-                                <tr><td><input type="button" class="btn" id="stop_global" value="STOP"></td></tr>
+                                <tr><td><input type="button" class="btn" id="stop_global" value="PLAY | STOP"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td><input type="button" class="btn" id="aux1_global" value="AUX 1"></td></tr>
                                 <tr><td></td></tr>
