Botón play stop funcional canal 1

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <tr>
                     <th id="canal_1">
                         <table>
-                                <tr><td><input type="button" class="btn" id="play_ch1" value="PLAY"></td></tr>
+                                <tr><td><input type="button" class="play-stop" id="play_ch1" value="PLAY">&nbsp;<input type="button" class="play-stop" id="stop_ch1" value="STOP"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
                                 <tr><td class="potenciometro" id="gain_ch1">
@@ -53,7 +53,7 @@
                     </th>
                     <th id="canal_2">
                         <table>
-                            <tr><td><input type="button" class="btn" id="load_ch2" value="LOAD"></td></tr>
+                            <tr><td><input type="button" class="play-stop" id="play_ch2" value="PLAY">&nbsp;<input type="button" class="play-stop" id="stop_ch2" value="STOP"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch2">
@@ -92,7 +92,7 @@
                     </th>
                     <th id="canal_3">
                         <table>
-                            <tr><td><input type="button" class="btn" id="load_ch3" value="LOAD"></td></tr>
+                            <tr><td><input type="button" class="play-stop" id="play_ch3" value="PLAY">&nbsp;<input type="button" class="play-stop" id="stop_ch3" value="STOP"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch3">
@@ -131,7 +131,7 @@
                     </th>
                     <th id="canal_4">
                         <table>
-                            <tr><td><input type="button" class="btn" id="load_ch4" value="LOAD"></td></tr>
+                            <tr><td><input type="button" class="play-stop" id="play_ch4" value="PLAY">&nbsp;<input type="button" class="play-stop" id="stop_ch4" value="STOP"></td></tr>
                             <tr><td></td></tr>
                             <tr><td id="txt">GAIN</td></tr>
                             <tr><td class="potenciometro" id="gain_ch4">
@@ -210,7 +210,7 @@
                                 <tr><td></td></tr>
                                 <tr><td><input type="button" class="btn" id="main_global" value="MAIN"></td></tr>
                                 <tr><td></td></tr>
-                                <tr><td><input type="button" class="btn" id="stop_global" value="PLAY | STOP"></td></tr>
+                                <tr><td><input type="button" class="play-stop" id="play" value="PLAY">&nbsp;<input type="button" class="play-stop" id="stop" value="STOP"></td></tr>
                                 <tr><td></td></tr>
                                 <tr><td><input type="button" class="btn" id="aux1_global" value="AUX 1"></td></tr>
                                 <tr><td></td></tr>
