función mute ch1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <tr><td></td></tr>
                                 <tr><td><input type="button" class="btn" id="main_ch1" value="MAIN"></td></tr>
                                 <tr><td></td></tr>
-                                <tr><td><input type="button" class="btn" id="mute_ch1" value="MUTE"></td></tr>
+                                <tr><td><input type="button" class="btn" id="mute_ch1" value="MUTE" onclick="mute1()"></td></tr>
                                 <tr><td></td></tr>
                             </table>
                             <table>
