cambios prueba ganancia

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
                                 <tr><td class="potenciometro" id="gain_ch1">
-                                    <input type="range" min="0" max="15" value="0">
+                                    <input type="range" id="gain1" min="0" max="15" value="0" step="3" onchange="setGain1()">
                                     <p id="value_ch1_gain">0</p>
                                 </td></tr>
                                 <tr><td></td></tr>
