--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Mesa de mezclas virtual</title>
         <link rel="stylesheet" href="style.css">
         <script src="main.js" defer></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="base">
@@ -17,7 +18,7 @@
                                 <tr><td></td></tr>
                                 <tr><td id="txt">GAIN</td></tr>
                                 <tr><td class="potenciometro" id="gain_ch1">
-                                    <input type="range" id="gain1" min="0" max="15" value="0" step="3" onchange="setGain1()">
+                                    <input type="range" id="gain1" min="0.1" max="0.9" value="0.1" step="0.2">
                                     <p id="value_ch1_gain">0</p>
                                 </td></tr>
                                 <tr><td></td></tr>
